# SyzygyEngine

./: .gitignore  CMakeLists.txt  README.md  build.py
src/: main.cpp  window.hpp
src/Events/: events.cpp  events.hpp
src/Window/: window.cpp
